--- a/src/assets/css/_layout.scss
+++ b/src/assets/css/_layout.scss
@@ -3,6 +3,16 @@
 @use 'sprite/mo_icons';
 @use 'breakpoints';
 
+// scrolllock
+.scrolllock {
+	body {
+		overflow: hidden;
+    position: fixed;
+    left: 0;
+    width: 100%;
+	}
+}
+
 // header
 .header {
 	position: fixed;
@@ -384,9 +394,10 @@
 			display: none;
 		}
 		.header__funkplay {
+			flex-shrink: 0;
 			position: static;
 			order: 1;
-			margin: 20px 0 0;
+			margin: 20px 0;
 			@include mixins.sprite(mo_icons.$bg-header-funkplay-off);
 		}
 		.header__funkplay--active {
@@ -406,12 +417,14 @@
 			width: 100%;
 			height: 100%;
 			margin-left: 0;
+			padding: 135px 15px 90px;
+			background-color: #fff;
 			@include mixins.translate(-100vw, 0);
 			.nav__container {
 				flex-direction: column;
+				justify-content: stretch;
+				overflow-y: auto;
 				height: 100%;
-				padding: 170px 15px 90px;
-				background-color: #fff;
 			}
 			.nav__trigger {
 				display: none;
@@ -444,6 +457,11 @@
 				}
 				.nav__marquee {
 					display: none;
+				}
+			}
+			.nav__menu {
+				&:last-child {
+					padding-bottom: 0;
 				}
 			}
 			.nav__menu--theme {
