--- a/src/assets/css/cart.scss
+++ b/src/assets/css/cart.scss
@@ -15,10 +15,14 @@ width: 100%;
 }
 }
 .sub__container .inner_wrap {
-max-width: 1310px;
-margin: 100px auto 0;
+  max-width: 1310px;
+  margin: 100px auto 0;
   padding-left: 15px;
   padding-right: 15px;
+
+  @include breakpoints.mobile() {
+    max-width: 100%;
+  }
 }
 
 .xans-order-basketpackage {
@@ -28,20 +32,28 @@ margin: 100px auto 0;
 .xans-order-basketpackage .ec-base-table.total table {border: 0;}
 
 
-.cart_wrap .titleArea {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  text-align: left;   
-  width: calc(100% - 370px);
-}
-.cart_wrap .titleArea > h2 {
-  padding: 0;
-  font-size: 60px;
-  font-weight: 500;
-}
-.cart_wrap .titleArea .ico__shipp {
-  @include icons.retina-sprite(icons.$ico-shipp-group);
+.cart_wrap {
+  .titleArea {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    text-align: left;   
+    width: calc(100% - 370px);
+    > h2 {
+      padding: 0;
+      font-size: 60px;
+      font-weight: 500;
+    }
+    .ico__shipp {
+      @include icons.retina-sprite(icons.$ico-shipp-group);
+    }
+    @include breakpoints.mobile() {
+      width: 100%;
+      > h2 {
+        font-size: 48px;
+      }
+    }
+  }
 }
 
 .neworderListArea {
@@ -50,6 +62,10 @@ margin: 100px auto 0;
   border-radius: 35px;
   overflow: hidden;
   padding: 30px;
+
+  @include breakpoints.mobile() {
+    width: 100%;
+  }
 }
 
 .xans-order-basketpackage {
@@ -58,11 +74,14 @@ margin: 100px auto 0;
       width: calc(100% - 370px);
       .tab_moreinfo {
         position: absolute;
+        top: inherit;
         right: 0;
         bottom: 0;
       }
       .ico__shipp {
+        display: inline-block;
         @include icons.retina-sprite(icons.$ico-shipp-group);
+        vertical-align: middle;
       }
       
       .menu {
@@ -85,6 +104,16 @@ margin: 100px auto 0;
           }
         }
       }
+      @include breakpoints.mobile() {
+        width: 100%;
+        .menu {
+          li {
+            a {
+              font-size: 12px;
+            }
+          }
+        }
+      }
     }
   }
 }
@@ -92,6 +121,18 @@ margin: 100px auto 0;
 .xans-order-basketpackage {
   .ec-base-table.typeList table {
     border: 0;
+
+    @include breakpoints.mobile() {
+      colgroup {display: none;}
+      table, thead, tbody, th, td, tr { 
+        display: block; 
+      }
+      // thead tr { 
+      //   position: absolute;
+      //   top: -9999px;
+      //   left: -9999px;
+      // }
+    }
   }
   .ec-base-table thead th {
     border: 0 !important;
@@ -159,7 +200,9 @@ margin: 100px auto 0;
         @include mixins.PtdMedium();
       }
       a {
-        display: inline-block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         width: 20px;
         height: 20px;
       }
@@ -169,9 +212,6 @@ margin: 100px auto 0;
         right: inherit;
         bottom: inherit;
         top: inherit;
-        width: 100%;
-        height: 100%;
-        
       }
     }
     .count_change {
@@ -202,6 +242,12 @@ margin: 100px auto 0;
   right: 0;
   top: 60px;
   width: 360px;
+  @include breakpoints.mobile() {
+    position: relative;
+    right: inherit;
+    top: inherit;
+    width: 100%;
+  }
 }
 .area_delv_info {
   padding: 30px;
@@ -334,19 +380,41 @@ div.ec-base-help.ec-base-help_new .inner {width: 100%; margin: 0;margin-top: 25p
     }
     .menu__round {
       padding-top: 122.883%;
+      clip-path: inset(0 round 25px);
     }
     .marquee {
       height: 66px;
     }
-    .menu__tag {
-      font-size: 24px;
+    .menu__tags {
+      top: 17px;
+      left: 16px;
     }
+    .menu__tag {
+      height: 20px;
+      padding: 0 6px;
+      font-size: 15px;
+    }
+		.menu__tag--celeb {
+			i {
+				@include mixins.sprite(mo_icons.$ico-menu-tag-celeb10);
+			}
+		}
+		.menu__tag--picks {
+			i {
+				@include mixins.sprite(mo_icons.$ico-menu-tag-picks13);
+			}
+		}
     .menu__colors {
+      top: 17px;
+      right: 16px;
       .menu__color {
         width: 6px;
         height: 6px;
         margin-left: 9px;
       }
+    }
+    .menu__info {
+      padding-bottom: 10px;
     }
   }
 
