--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -197,6 +197,7 @@
 			bottom: 0;
 			width: 50%;
 			height: 105px;
+			border-radius: 34px;
 
 			.marquee {
 				.marquee__loop {
@@ -270,13 +271,13 @@
 		.swiper {
 			width: 100%;
 			height: 100%;
-			clip-path: inset(1px round 42px);
+			clip-path: inset(1px round 2.19vw);
 		}
 		.swiper-wrapper {
 			transition-timing-function: cubic-bezier(0.65, 0, 0.35, 1);
 		}
 		> .best-menu__img {
-			clip-path: inset(1px round 42px);
+			clip-path: inset(1px round 2.19vw);
 		}
 	}
 	.best-menu__info {
@@ -293,7 +294,6 @@
 			flex-direction: column;
 			justify-content: center;
 			align-items: center;
-			word-break: break-all;
 		}
 	}
 	.best-menu__info--green {
@@ -357,12 +357,14 @@
 		}
 	}
 	.best-menu__category {
+		width: 100%;
 		margin-bottom: 10px;
 		font-weight: 500;
 		letter-spacing: -0.02em;
 		text-transform: uppercase;
 	}
 	.best-menu__name {
+		width: 100%;
 		font-weight: 500;
 		font-size: 48px;
 		letter-spacing: -0.02em;
@@ -517,17 +519,17 @@
 			padding: 0 4.53vw;
 			margin-top: 17.73vw;
 			.swiper {
-				clip-path: inset(1px round 26px);
+				clip-path: inset(1px round 6.93vw);
 			}
 			> .best-menu__img {
-				clip-path: inset(1px round 26px);
+				clip-path: inset(1px round 6.93vw);
 			}
 		}
 		.best-menu__category {
 			font-size: 8px;
 		}
 		.best-menu__name {
-			font-size: 22px;
+			font-size: 18px;
 		}
 		.best-menu__link {
 			width: 53px;
@@ -707,7 +709,7 @@
 		bottom: 234px;
 		z-index: 5;
 		width: 100%;
-		clip-path: inset(0 round 42px);
+		clip-path: inset(0 round 2.19vw);
 		.celeb-curation__cut {
 			position: absolute;
 			left: 50%;
@@ -777,7 +779,7 @@
 		.celeb-curation__celeb {
 			top: 53px;
 			bottom: 53px;
-			clip-path: inset(0 round 21px);
+			clip-path: inset(0 round 5.6vw);
 			.celeb-curation__cut {
 				height: 100%;
 				img {
@@ -796,7 +798,7 @@
 				margin: 10px 0 0 0;
 			}
 			.menu__round {
-				clip-path: inset(0 round 21px);
+				clip-path: inset(0 round 5.6vw);
 			}
 			.menu__info {
 				padding: 0 16px 16px;
@@ -811,7 +813,7 @@
 
 .menu {
 	.menu__round {
-		clip-path: inset(0 round 42px);
+		clip-path: inset(0 round 2.19vw);
 	}
 
 	@include breakpoints.mobile() {
@@ -892,7 +894,7 @@
 		}
 		.menu__round {
 			padding-top: 107.73vw;
-			clip-path: inset(0 round 32px);
+			clip-path: inset(0 round 8.53vw);
 		}
 		.menu__category {
 			.menu__text {
