--- a/src/assets/css/archive.scss
+++ b/src/assets/css/archive.scss
@@ -238,6 +238,7 @@
 				}
 				img {
 					display: block;
+					border-radius: 36px;
 				}
 			}
 		}
@@ -299,6 +300,9 @@
 				.archive-detail__product {
 					&:not(:first-child) {
 						margin-top: 5px;
+					}
+					img {
+						border-radius: 26px;
 					}
 				}
 			}
