--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -117,6 +117,15 @@
 		border-radius: 36px;
 		background-color: #fff;
 		cursor: pointer;
+		&:hover {
+			.marquee {
+				.marquee__loop {
+					.marquee__text {
+						color: #fff;
+					}
+				}
+			}
+		}
 		.visual__video {
 			visibility: hidden;
 			video {
