--- a/src/assets/css/_reset.scss
+++ b/src/assets/css/_reset.scss
@@ -66,6 +66,11 @@ a {
 	text-decoration: none;
 	cursor: pointer;
 }
+body {
+	a {
+		font-family: inherit;
+	}
+}
 
 table {
 	border-collapse: collapse;
