--- a/src/assets/css/archive.scss
+++ b/src/assets/css/archive.scss
@@ -278,6 +278,10 @@
 				width: 16px;
 				height: 16px;
 			}
+			&.archive-detail__trigger--active {
+				right: 0;
+				background-color: #ffffff;
+			}
 		}
 		.archive-detail__contents {
 			position: absolute;
@@ -287,7 +291,7 @@
 			z-index: 20;
 			width: auto;
 			margin-top: 0;
-			margin-bottom: 50px;
+			margin-bottom: 55px;
 			padding: 25px 25px 0 25px;
 			border-radius: 10px;
 			background-color: #ededed;
@@ -310,7 +314,7 @@
 			}
 			.archive-detail__inner {
 				padding: 0;
-				margin-bottom: -12px;
+				margin-bottom: -17px;
 				.archive-detail__text {
 					font-size: 14px;
 					line-height: 20px;
@@ -328,20 +332,29 @@
 			position: relative;
 			top: inherit;
 			width: calc(100% - 30px);
-			height: 50px;
+			height: 55px;
 			margin: 0 auto;
 			border-bottom-left-radius: 10px;
 			background: {
 				image: url('../images/archive-detail__tail.png');
 				position: right bottom;
-				size: 50px;
+				size: 55px;
 				repeat: no-repeat;
 			}
 			overflow: hidden;
 			> div {
-				width: calc(100% - 50px);
+				width: calc(100% - 55px);
 				height: 100%;
 				background-color: #ededed;
+			}
+			&.archive-detail__tail-toggle {
+				background-image: none;
+				> div {
+					background-color: transparent;
+				}
+				.archive-detail__ico {
+					display: block;
+				}
 			}
 		}
 
