--- a/src/assets/css/archive.scss
+++ b/src/assets/css/archive.scss
@@ -262,11 +262,11 @@
 			position: sticky;
 			left: auto;
 			top: auto;
-			bottom: 100px;
+			bottom: 80px;
 		}
 		.archive-detail__trigger {
 			position: absolute;
-			right: 15px;
+			right: 0;
 			bottom: 0;
 			z-index: 25;
 			width: 35px;
@@ -349,6 +349,8 @@
 			}
 			&.archive-detail__tail-toggle {
 				background-image: none;
+				height: 35px;
+				margin-top: -45px;
 				> div {
 					background-color: transparent;
 				}
@@ -375,6 +377,7 @@
 		.archive-detail__info {
 			height: 63px;
 			padding: 0 15px;
+			margin-top: 20px;
 			font-size: 12px;
 		}
 		.archive-detail__name {
