--- a/src/assets/css/_reset.scss
+++ b/src/assets/css/_reset.scss
@@ -96,7 +96,7 @@ input[type='email'] {
 	appearance: none;
 	width: 100%;
 	height: 58px;
-	padding: 0 15px;
+	padding: 0 14px;
 	border: 1px solid #f4f4f7;
 	border-radius: 58px;
 	background-color: #f4f4f7;
@@ -104,6 +104,7 @@ input[type='email'] {
 	font-size: 18px;
 	font-family: 'AT surt' ,'Pretendard Variable', -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
 	outline: none;
+	letter-spacing: -0.025em;
 	&:not([readonly]):not([disabled]):not([aria-invalid='true']) {
 		&:focus {
 			border-color: #5eecfa;
@@ -123,25 +124,36 @@ input[type='email'] {
 		padding-right: 60px;
 		border-color: red;
 	}
-	@include breakpoints.mobile() {
-		font-size: 13px;
-	}
 }
 ::-webkit-input-placeholder {
+	padding: 0 9px;
 	font-size: 14px;
 	color: #999;
 }
 ::-moz-placeholder {
+	padding: 0 9px;
 	font-size: 14px;
 	color: #999;
 }
 
 @include breakpoints.mobile() {
+	input[type='text'],
+	input[type='password'],
+	input[type='number'],
+	input[type='tel'],
+	input[type='email'] {
+		height: 50px;
+		padding: 0 11px;
+		font-size: 14px;
+		letter-spacing: -0.0125em;
+	}
 	::-webkit-input-placeholder {
-		font-size: 13px;
+		padding: 0 8.5px;
+		font-size: 12px;
 	}
 	::-moz-placeholder {
-		font-size: 13px;
+		padding: 0 8.5px;
+		font-size: 12px;
 	}
 }
 
@@ -157,10 +169,6 @@ input[type='radio'] {
 input[type='checkbox'] {
 	width: 14px;
 	height: 14px;
-	& + label {
-		padding-left: 3px;
-		vertical-align: middle;
-	}
 	& ~ input[type='checkbox'] {
 		margin-left: 25px;
 	}
@@ -192,7 +200,9 @@ input[type='radio'] {
 		}
 	}
 	& + label {
-		padding-left: 7px;
+		padding-left: 2px;
+		font-size: 18px;
+		@include mixins.PtdMedium();
 	}
 	& ~ input[type='radio'] {
 		margin-left: 35px;
@@ -201,8 +211,39 @@ input[type='radio'] {
 input[type='checkbox'],
 input[type='radio'] {
 	& + label {
-		@include mixins.PtdMedium();
 		letter-spacing: -0.025em;
+		vertical-align: middle;
+	}
+}
+
+@include breakpoints.mobile() {
+	input[type='checkbox'] {
+		& + label {
+			font-size: 12px;
+			letter-spacing: -0.012em;
+		}
+	}
+	input[type='radio'] {
+		width: 22px;
+		height: 22px;
+		&:checked {
+			&:before {
+				top: 4px;
+				width: 1px;
+				height: 10px;
+			}
+			&:after {
+				left: 7px;
+				top: 14px;
+				width: 5px;
+				height: 1px;
+			}
+		}
+		& + label {
+			font-size: 14px;
+			letter-spacing: 0;
+			@include mixins.PtdMedium();
+		}
 	}
 }
 
@@ -213,7 +254,7 @@ input[type='checkbox'].chk_design {
 	border: 0;
 	border-radius: 50%;
 	background: {
-		image: url('/assets/images/ico_checkbg.png');
+		image: url('../images/ico_checkbg.png');
 		size: cover;
 		position: center center;
 		repeat: no-repeat;
@@ -221,7 +262,7 @@ input[type='checkbox'].chk_design {
 	&:checked {
 		background-color: none;
 		background: {
-			image: url('/assets/images/ico_checkbg_on.png');
+			image: url('../images/ico_checkbg_on.png');
 		}
 	}
 }
@@ -367,17 +408,6 @@ textarea {
 			display: none;
 		}
 	}
-}
-
-.a11y {
-	position: absolute;
-	width: 1px;
-	height: 1px;
-	padding: 0;
-	margin: -1px;
-	overflow: hidden;
-	clip: rect(0, 0, 0, 0);
-	border: 0;
 }
 
 #contents {
