--- a/src/assets/css/archive.scss
+++ b/src/assets/css/archive.scss
@@ -35,26 +35,26 @@
 
 		.menu {
 			.menu__container {
-				padding: 0;
+				padding: 0 4vw;
 			}
 			.menu__list {
-				margin-left: -2px;
+				margin-left: 0;
 			}
 			.menu__item {
-				width: calc(50% - 2px);
-				margin-left: 2px;
+				width: 100%;
+				margin-left: 0;
 			}
 			.menu__round {
-				padding-top: 66.67vw;
+				padding-top: 114.67vw;
 				clip-path: inset(0 round 6.93vw);
 			}
 			.menu__info {
-				padding-bottom: 26px;
+				padding-bottom: 15px;
 			}
 			.menu__name {
-				height: 37.5px;
-				font-size: 10px;
-				line-height: 12px;
+				height: 27.5px;
+				font-size: 11px;
+				line-height: 14px;
 				letter-spacing: -0.01em;
 				@include mixins.ellipse(3);
 			}
@@ -66,13 +66,16 @@
 	position: relative;
 	padding-top: 0;
 	.archive-detail__container {
+		display: flex;
+		flex-direction: column;
 		position: relative;
 	}
 	.archive-detail__floating {
-		position: absolute;
-		left: 40px;
+		order: -1;
+		position: sticky;
 		top: 160px;
 		z-index: 20;
+		margin: -214px 0 214px 40px;
 	}
 	.archive-detail__trigger {
 		display: flex;
@@ -130,6 +133,9 @@
 		}
 	}
 	.archive-detail__contents {
+		position: absolute;
+		left: 0;
+		top: 0;
 		width: 454px;
 		margin-top: 57px;
 		.archive-detail__row {
@@ -258,11 +264,14 @@
 
 	@include breakpoints.mobile() {
 		padding-top: 60px;
+		.archive-detail__container {
+			display: block;
+		}
 		.archive-detail__floating {
-			position: sticky;
-			left: auto;
+			order: initial;
 			top: auto;
 			bottom: 80px;
+			margin: 0;
 		}
 		.archive-detail__trigger {
 			position: absolute;
@@ -284,8 +293,8 @@
 			}
 		}
 		.archive-detail__contents {
-			position: absolute;
 			left: 15px;
+			top: auto;
 			right: 15px;
 			bottom: -12px;
 			z-index: 20;
@@ -343,7 +352,7 @@
 			}
 			overflow: hidden;
 			> div {
-				width: calc(100% - 55px);
+				width: calc(100% - 50px);
 				height: 100%;
 				background-color: #ededed;
 			}
@@ -418,11 +427,13 @@
 			.archive-detail__products {
 				bottom: 6px;
 				.archive-detail__product {
+					width: 85px;
+					height: 85px;
 					&:not(:first-child) {
 						margin-top: 5px;
 					}
 					img {
-						border-radius: 26px;
+						border-radius: 22px;
 					}
 				}
 			}
