스킨용 > css 보완

--- a/src/assets/css/_menu.scss
+++ b/src/assets/css/_menu.scss
@@ -121,6 +121,11 @@
 		font-size: 14px;
 		line-height: 18px;
 		@include mixins.PtdRegular();
+		span {
+			font-size: inherit !important;
+			line-height: inherit !important;
+			color: #000 !important;
+		}
 	}
 	.menu__event {
 		display: inline-flex;
